2004-06-26  Andrew Lindeman <joyoflinux@yahoo.com> 1.4.4-cvs-b222

	* Change: Don't have gallery_mail() print out the email even when
	  we're in debug mode.  This can cause unintended security issues.

2004-06-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b221

	* Change:  Dumbest bug evar!  Don't re-initialize $albumDB on every call
	  to a recursive-calling function.  It's slower than you can possibly imagine.

2004-06-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b220

	* Change:  "!isset($page)" to "empty($page)"
	  http://gallery.menalto.com/index.php?name=PNphpBB2&file=viewtopic&p=81113#81113

2004-06-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b219

	* Change: sessions - phpNuke requires session_start(), postNuke errors
	  on it.  Check...

	* Change: Match casing on 'configuration wizard' for admin links

2004-06-25  Jens Tkotz <jens@peino.de> 1.4.4-cvs-b218

	* Change: A litte less tables in view_album and some minor changes for layout of caption

2004-06-25  Jens Tkotz <jens@peino.de> 1.4.4-cvs-b217

	* Fix: Gallery didnt recognized a log out from GeekLog

2004-06-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b216

	* Add: Random Block - added and updated to use our save serialization
	  functions

	* Change: album->canReadRecurse() - change "global $albumDB" to a new
	  albumDB, since not all callers have established an albumDB.

2004-06-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b215

	* Change: Suppress non-essential ini_set() error message, if server disallows
	  ini_set()

	* Change: Only execute start_session() if we're not embedded.
	  When embedded, this throws an "already started" error message with devMode on.

2004-06-24 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b214

	* Fix: Bug #978297; User-Language was not saved for selfregisterd users.

2004-06-23 Chris Kelly <ckdake@users.sf.net>  1.4.4-cvs-b213

        * Fix: quoted attribute for better HTML compliance
